--- a/Views/Product/Index.cshtml
+++ b/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Northwind.Models
 @model IEnumerable<Category>
-<div id="User" style="display:none;" data-email="@User.Identity.Name" data-customer="@User.IsInRole("Customer")"></div>
+<div id="User" style="display:none;" data-email="@User.Identity.Name" data-customer="@User.IsInRole("customer")"></div>
 <table class="table table-hover">
     <thead>
         <tr>
