--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,12 +56,15 @@
                 </li>
                 @if (User?.IsInRole("Employee") ?? false)
                 {
-                <li class="nav-item">
-                    <a class="nav-link" asp-controller="Order" asp-action="Index"><i class="fas fa-archive"></i> Orders</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Order" asp-action="Index"><i class="fas fa-archive"></i> Orders</a>
+                    </li>
                 }
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Game" asp-action="Index"><i class="fas fa-gamepad"></i> ForkKnife Or Spoon</a>
+                </li>
             </ul>
-             @if (User?.Identity?.IsAuthenticated ?? false)
+            @if (User?.Identity?.IsAuthenticated ?? false)
             {
                 <a class="signInOut mr-2" asp-controller="Account" asp-action="Logout"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
             }
@@ -71,6 +74,7 @@
             }
         </div>
     </nav>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <div class="container-fluid">
         @RenderBody()
     </div>
@@ -87,7 +91,6 @@
         </div>
     </div>
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- popper & bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
